<resources>
    <string name="app_name">渣渣汇</string>

    //main drawer
    <string name="type_vod">点播</string>
    <string name="type_live">直播</string>
    <string name="type_news">新闻</string>
    <string name="type_picture">美图</string>
    <string name="type_video">视频</string>
    <string name="type_mine">我的</string>
    <string name="drawer_about">关于</string>
    <string name="drawer_collection">收藏</string>
    <string name="drawer_setting">设置</string>
    <string name="drawer_open">打开</string>
    <string name="drawer_close">关闭</string>
    <string name="drawer_group_content">资讯</string>
    <string name="drawer_group_options">选项</string>

    <string name="empty_no_data">获取数据失败,点我重试</string>

    <string name="umeng_sharebutton_copy">复制文本</string>
    <string name="umeng_sharebutton_copyurl">复制连接</string>
    <string name="title_activity_settings">设置</string>
    <string name="open">用到的开源库</string>
    <string name="about_app">渣渣汇,我的第一个开源的MVP练手项目,持续更新中...</string>
    <string name="contact_me">联系我</string>
    <string name="string_share_text">这是一个Retrofit+RxJava+Mvp架构的App,仅用于个人练手https://github.com/jingyc0305/MyFirstGitHubApp[分享自渣渣汇]</string>
    <string name="blog">Email:\n\n 554783696@qq.com\n\nGitHub:
        \n\n https://github.com/jingyc0305</string>
    <!-- Strings related to Settings -->
    <string name="open_source">
         io.reactivex.rxjava2:rxjava:2.1.0
        \n\ncom.squareup.retrofit2:retrofit:2.2.0
        \n\ncom.squareup.okhttp3:okhttp:3.7.0
        \n\ncom.jakewharton:butterknife:8.8.1
        \n\ncom.google.dagger:dagger:2.6
        \n\ncom.tbruyelle.rxpermissions:rxpermissions:0.9.1@aar
        \n\ncom.orhanobut:logger:1.15
        \n\nde.hdodenhof:circleimageview:2.1.0
        \n\ncom.miguelcatalan:materialsearchview:1.4.0
        \n\nme.yokeyword:fragmentation:0.10.4
        \n\ncom.youth.banner:banner:1.4.10
        \n\ncom.github.bumptech.glide:glide:3.7.0
        \n\ncom.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.30
        \n\ncom.github.hotchemi:permissionsdispatcher:3.0.1
        \n\ncom.kelin.translucentbar:library:0.8.0
        \n\ncom.king.view:supertextview:1.0.1
        \n\ncom.github.lygttpod:SuperTextView:2.1.5
        \n\ncom.github.VictorAlbertos.RxCache:runtime:1.8.1-2.x
        \n\ncom.github.VictorAlbertos.Jolyglot:gson:0.0.3</string>
    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>




    <string name="islive">正在直播</string>



    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="tab_titles_main_home">
        <item>直播</item>
        <item>推荐</item>
        <item>分类</item>
    </string-array>
    <string-array name="query_suggestions">
        <item>Android</item>
        <item>Android Search</item>
        <item>Android Golde</item>
        <item>Android JianShu</item>
        <item>iOS</item>
        <item>SCALA</item>
        <item>Ruby</item>
        <item>JavaScript</item>
        <item>C#</item>
        <item>Python</item>
        <item>C</item>
        <item>C++</item>
        <item>PHP</item>
        <item>Go</item>
        <item>Perl</item>
        <item>Bash</item>
        <item>Lua</item>
        <item>R</item>
        <item>TCL</item>
        <item>Haskell</item>
        <item>Objective C</item>
        <item>Swift</item>
        <item>Kotlin</item>
        <item>jQuery</item>
        <item>Development</item>
        <item>Web</item>
        <item>Ajax</item>
        <item>Test</item>
        <item>Testing</item>
        <item>CookBook</item>
        <item>Beagle</item>
        <item>VMware</item>
        <item>Less.js</item>
        <item>IDE</item>
        <item>Arduino</item>
        <item>Xamarin</item>
        <item>UI</item>
        <item>Microsoft</item>
        <item>Application</item>
        <item>Development</item>
        <item>JUnit</item>
        <item>SQL</item>
        <item>Beagle</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="live_home_follow_anchor">关注</string>
    <string name="live_home_entertainment">娱乐</string>
    <string name="live_home_game">游戏</string>
    <string name="live_home_mobile_game">手游</string>
    <string name="live_home_painting">绘画</string>
    <string name="live_home_all_live">全部直播</string>
</resources>
