<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/drawer_group_content">
        <menu>
            <item
                android:id="@+id/drawer_vod"
                android:icon="@mipmap/type_vod_select"
                android:checkable="true"
                android:checked="true"
                android:title="@string/type_vod"/>
            <item
                android:id="@+id/drawer_live"
                android:icon="@mipmap/type_live_select"
                android:checkable="true"
                android:title="@string/type_live"/>
            <item
                android:id="@+id/drawer_news"
                android:icon="@mipmap/type_news_select"
                android:checkable="true"
                android:title="@string/type_news"/>
            <item
                android:id="@+id/drawer_picture"
                android:icon="@mipmap/type_pic_select"
                android:checkable="true"
                android:title="@string/type_picture"/>
            <item
                android:id="@+id/drawer_video"
                android:icon="@mipmap/smile_video"
                android:checkable="true"
                android:title="@string/type_video"/>
        </menu>
    </item>
    <item android:title="@string/drawer_group_options">
        <menu>
            <item
                android:id="@+id/drawer_like"
                android:icon="@mipmap/ic_drawer_like"
                android:checkable="true"
                android:title="@string/drawer_collection"/>
            <item
                android:id="@+id/drawer_setting"
                android:checked="false"
                android:icon="@mipmap/ic_drawer_setting"
                android:checkable="true"
                android:title="@string/drawer_setting"/>
            <item
                android:id="@+id/drawer_about"
                android:icon="@mipmap/ic_drawer_about"
                android:checkable="true"
                android:title="@string/drawer_about"/>
        </menu>
    </item>
</menu>