<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical">
    <EditText
        android:id="@+id/et_search"
        android:layout_width="match_parent"
        android:layout_height="70px"
        android:layout_marginLeft="@dimen/margin_size_1_left_right"
        android:layout_marginRight="@dimen/margin_size_1_left_right"
        android:layout_marginTop="@dimen/margin_size_top_1"
        android:background="@drawable/shape_et_search_live_main_home"
        android:drawableLeft="@mipmap/ic_search_bar"
        android:editable="false"
        android:focusable="false"
        android:hint="搜索房间或主播"
        android:textColorHint="@color/et_search_hint_live"
        android:textSize="22px"/>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="216px"
        android:layout_marginLeft="@dimen/margin_size_1_left_right"
        android:layout_marginRight="@dimen/margin_size_1_left_right"
        android:layout_marginTop="@dimen/margin_size_top_1"
        app:cardCornerRadius="@dimen/card_view_radius_live">
        <com.youth.banner.Banner
            android:id="@+id/banner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </android.support.v7.widget.CardView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_type1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:drawableTop="@mipmap/live_home_follow_anchor"
            android:text="@string/live_home_follow_anchor"/>

        <TextView
            android:id="@+id/tv_type2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:drawableTop="@mipmap/ic_live_home_entertainment"
            android:text="@string/live_home_entertainment"/>

        <TextView
            android:id="@+id/tv_type3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:drawableTop="@mipmap/ic_live_home_game"
            android:text="@string/live_home_game"/>

        <TextView
            android:id="@+id/tv_type4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@mipmap/ic_live_home_painting"
            android:gravity="center"
            android:text="@string/live_home_painting"/>

        <TextView
            android:id="@+id/tv_type5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:drawableTop="@mipmap/ic_live_home_mobile_game"
            android:text="@string/live_home_game"/>
    </LinearLayout>

</LinearLayout>
